# ai-commit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_zh.md  config.dev.toml  config.sample.toml  justfile  rustfmt.toml
.claude/plans/: multi-provider.md
.github/workflow/: pr-check.yml
.github/workflows/: pr-check.yml
completions/: _ai-commit
completions/bash/: _ai-commit
completions/fish/: ai-commit.fish
completions/zsh/: _ai-commit
src/: dirs.rs  lib.rs  main.rs  utils.rs
src/ai/: client.rs  mod.rs  prompts.rs  protocol.rs  provider.rs
src/commands/: amend.rs  commit.rs  config.rs  install.rs  mod.rs  uninstall.rs
src/config/: cache.rs  mod.rs  prompt.rs  settings.rs
src/git/: diff.rs  repository.rs
src/hooks/: prepare_commit_msg.rs
templates/: post-commit  prepare-commit-msg
