[package]
name = "ai-commit"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
anyhow = "1"
colored = "3"
clap = { version = "4.5", features = ["derive"] }
toml = "1.0"
dirs = "6.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
incremental = false
panic = "abort"
strip = true
overflow-checks = false
debug = false
debug-assertions = false

[lints.clippy]
unwrap_used = "deny"
